--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
 	"description": "The SilverStripe Framework Installer",
 	"require": {
 		"php": ">=5.3.2",
-		"silverstripe/cms": "3.0.*",
-		"silverstripe/framework": "3.0.*",
+		"silverstripe/cms": "3.1.3",
+		"silverstripe/framework": "3.1.3",
 		"silverstripe/googlesitemaps": "*",
 		"silverstripe/userforms": "*",
 		"silverstripe/spamprotection": "*",
