--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
-assets/
-cms/
-framework/
-googlesitemaps/
-assets/
-spamprotection/
-userforms/
+.sass-cache/*
+*.scssc
+html/*
+.DS_Store
+dashboard/
 vendor/
+cms/
+blog/
+betterbuttons/
+event_calendar/
+gridfield-bulk-editing-tools/
+gridfieldrelationhandler/
 recaptcha/
+sortablegridfield/
+spamprotection/
+themes/simple/
+timepickerfield/
+userforms/
+widgets/
+framework/
+division-project/
+googlesitemaps/
+division-bar/
+assets/
