--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
 	"description": "The SilverStripe Framework Installer",
 	"require": {
 		"php": ">=5.3.2",
-		"silverstripe/cms": "3.1.13",
-		"silverstripe/framework": "3.1.13",
+		"silverstripe/cms": "3.3@stable",
+		"silverstripe/framework": "3.3@stable",
 		"silverstripe/googlesitemaps": "*",
-		"silverstripe/userforms": "*",
+		"silverstripe/userforms": "2.0.*",
 		"silverstripe/spamprotection": "*",
 		"silverstripe/recaptcha" : "*"
 
