--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"silverstripe/googlesitemaps": "*",
 		"silverstripe/userforms": "2.0.*",
 		"silverstripe/spamprotection": "*",
-		"silverstripe/recaptcha" : "*"
+		"silverstripe/recaptcha" : "*",
+		"jonom/silverstripe-betternavigator" : "*"
 
 
 	},
